# trading-strategy-backtester

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
backend/engine/: back_tester.py  risk.py
backend/metrics/: equity_drawdown.py
backend/strategies/: base.py  ema.py  moving_avg.py  rsi.py  rsi_ema.py
backend/utils/: load_data.py
frontend/: .dockerignore  Dockerfile  tsconfig.app.json
frontend/src/: Dashboard.jsx
frontend/src/assets/services/: api.js
frontend/src/components/: inputForm.jsx
